tests/demo/demo.exp
Error ------------------------------------------------------------------------------------------------------ 1/f.js:3:27

Cannot perform arithmetic operation because null [1] is not a number. [unsafe-addition]

   1/f.js:3:27
   3| function f(x) { return 42/x; }
                                ^

References:
   1/f.js:5:9
   5| var x = null;
              ^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- 2/A.js:10:21

Cannot call `callback` with `this.getX()` bound to `x` because number [1] is incompatible with string [2].
[incompatible-call]

   2/A.js:10:21
   10|     return callback(this.getX());
                           ^^^^^^^^^^^

References:
   2/A.js:4:6
    4|   x: number; // instance field declaration
            ^^^^^^ [1]
   2/A.js:14:22
   14| function callback(x: string) { return x.length; }
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ 2/B.js:3:13

Cannot call `A` because exports [1] is not a function. [not-a-function]

   3| var z = new A("42").getX();
                  ^



Found 3 errors
